--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,37 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="description" content="Tracking Royal Ranger advancements">
-  <meta name="theme-color" content="#16161d">
+  
+  <link href="/build/app.css" rel="stylesheet">
 
+  <!-- See https://goo.gl/OOhYW5 -->
+  <link rel="manifest" href="manifest.json">
+
+  <!-- See https://goo.gl/qRE0vM -->
+  <meta name="theme-color" content="#3f51b5">
+
+  <!-- Add to homescreen for Chrome on Android. Fallback for manifest.json -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Ranger Tracker">
+
+  <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Advancement Tracker">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- Homescreen icons -->
+  <link rel="apple-touch-icon" href="/assets/icons/icon-48x48.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="/assets/icons/icon-96x96.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/icons/icon-192x192.png">
+
+  <!-- Tile icon for Windows 8 (144x144 + tile color) -->
+  <meta name="msapplication-TileImage" content="/assets/icons/icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#3f51b5">
+  <meta name="msapplication-tap-highlight" content="no">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
-
-  <link href="/build/app.css" rel="stylesheet">
 
   <script src="/assets/js/firebase-app.js"></script>
   <script async defer src="/assets/js/firebase-auth.js"></script>
@@ -25,9 +47,7 @@
   <script async defer src="/assets/js/firebase-storage.js"></script>
   <script src="/build/app.js"></script>
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
