--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="description" content="Tracking Royal Ranger advancements">
   
-  <link href="../build/app.css" rel="stylesheet">
+  <link href="/build/app.css" rel="stylesheet">
 
   <!-- See https://goo.gl/OOhYW5 -->
   <link rel="manifest" href="manifest.json">
@@ -26,34 +26,32 @@
   <meta name="apple-mobile-web-app-title" content="Advancement Tracker">
 
   <!-- Homescreen icons -->
-  <link rel="apple-touch-icon" href="./assets/icons/icon-48x48.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="./assets/icons/icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="96x96" href="./assets/icons/icon-96x96.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="./assets/icons/icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="192x192" href="./assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" href="/assets/icons/icon-48x48.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="96x96" href="/assets/icons/icon-96x96.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/icons/icon-192x192.png">
 
   <!-- Tile icon for Windows 8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="./assets/icons/icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/assets/icons/icon-144x144.png">
   <meta name="msapplication-TileColor" content="#3f51b5">
   <meta name="msapplication-tap-highlight" content="no">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script src="./assets/js/firebase-app.js"></script>
-  <script async defer src="./assets/js/firebase-auth.js"></script>
-  <script async defer src="./assets/js/firebase-database.js"></script>
-  <script async defer src="./assets/js/firebase-firestore.js"></script>
-  <script async defer src="./assets/js/firebase-functions.js"></script>
-  <script async defer src="./assets/js/firebase-storage.js"></script>
-  <script src="./build/app.js"></script>
+  <script src="/assets/js/firebase-app.js"></script>
+  <script async defer src="/assets/js/firebase-auth.js"></script>
+  <script async defer src="/assets/js/firebase-database.js"></script>
+  <script async defer src="/assets/js/firebase-firestore.js"></script>
+  <script async defer src="/assets/js/firebase-functions.js"></script>
+  <script async defer src="/assets/js/firebase-storage.js"></script>
+  <script src="/build/app.js"></script>
 
-  <link rel="icon" type="image/x-icon" href="./assets/icon/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
 </head>
 
 <body>
-
   <tracker-app />
-
 </body>
 
 </html>
