Working on Planner Page and interaction with firebase.

--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,12 @@
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script src="/assets/js/firebase-app.js"></script>
+  <!--<script src="/assets/js/firebase-app.js"></script>
   <script async defer src="/assets/js/firebase-auth.js"></script>
   <script async defer src="/assets/js/firebase-database.js"></script>
   <script async defer src="/assets/js/firebase-firestore.js"></script>
   <script async defer src="/assets/js/firebase-functions.js"></script>
-  <script async defer src="/assets/js/firebase-storage.js"></script>
+  <script async defer src="/assets/js/firebase-storage.js"></script> -->
   <script src="/build/app.js"></script>
 
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
